--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start-server": "json-server --watch db.json --port 5000",
     "lint": "next lint",
     "prepare": "husky",
-    "check:types": "tsc"
+    "check:types": "tsc",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -53,8 +54,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.7.3"
   }
 }
